[gd_scene load_steps=13 format=3 uid="uid://by278l0ahh3px"]

[ext_resource type="Theme" uid="uid://7ww3fiqb5m66" path="res://scenes/ui/game_ui_theme.tres" id="1_ugp6d"]
[ext_resource type="Script" path="res://scenes/ui/tools_panel.gd" id="2_25y5w"]
[ext_resource type="Texture2D" uid="uid://ctfaj41f6g0rv" path="res://assets/game/objects/basic_tools_and_meterials.png" id="2_piepa"]
[ext_resource type="Texture2D" uid="uid://dnonpqbmm2q7b" path="res://assets/game/objects/basic_plants.png" id="3_v4bi4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_snlv1"]
atlas = ExtResource("2_piepa")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k3gb7"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_nhixd"]
atlas = SubResource("CompressedTexture2D_k3gb7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dtjit"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xvg6a"]
atlas = SubResource("CompressedTexture2D_dtjit")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4qo2"]
atlas = ExtResource("3_v4bi4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_l80uk"]
load_path = "res://.godot/imported/basic_plants.png-95b9b15040aa30969080ee5e6985e7ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xf6ew"]
atlas = SubResource("CompressedTexture2D_l80uk")
region = Rect2(0, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ugp6d")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_25y5w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_snlv1")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_nhixd")
icon_alignment = 1

[node name="ToolWatering" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_xvg6a")
icon_alignment = 1

[node name="ToolCorn" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_g4qo2")
icon_alignment = 1

[node name="ToolTamato" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_xf6ew")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolWatering" to="." method="_on_tool_watering_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCorn" to="." method="_on_tool_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTamato" to="." method="_on_tool_tamato_pressed"]
